@@ -1,6 +1,5 @@
 package org.plumelib.javacparse;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
@@ -12,7 +11,7 @@ import javax.tools.SimpleJavaFileObject;
 class FileJavaFileObject extends SimpleJavaFileObject {
 
   /** The contents of the file. */
-  private String javaCode;
+  private final String javaCode;
 
   /**
    * Creates a FileJavaFileObject for the given file.
@@ -22,14 +21,7 @@ class FileJavaFileObject extends SimpleJavaFileObject {
    */
   public FileJavaFileObject(String filename) throws IOException {
     super(Path.of(filename).toUri(), JavaFileObject.Kind.SOURCE);
-    File file = new File(filename);
-    if (!file.exists()) {
-      throw new IOException("file does not exist: " + filename);
-    }
-    if (!file.canRead()) {
-      throw new IOException("cannot read file: " + filename);
-    }
-    javaCode = new String(Files.readAllBytes(Path.of(filename)), Charset.defaultCharset());
+    javaCode = Files.readString(Path.of(filename), Charset.defaultCharset());
   }
 
   /**
